--- a/package.json
+++ b/package.json
@@ -13,13 +13,28 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "daisyui": "^3.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.10",
+    "next-auth": "^4.22.3",
+    "node-fetch": "^3.3.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
