--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@prisma/client": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.2",
+    "prisma": "^5.0.0"
   }
 }
